--- a/front-end/src/app/sign-up/sign-up.component.html
+++ b/front-end/src/app/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="row">
             <div class="text-center">
-                <h1 class="display-rebrand">Join as a client or freelancer</h1>
+                <h1 class="display-rebrand">Regjistrohu si biznes/ekspert ose si klient</h1>
             </div>
             <div class="col-md-6 col-sm-12">
                 <div data-cy="button-box" class="col align-self-center">
@@ -16,8 +16,8 @@
                             </label></div>
                         <div id="button-box-1" class="up-button-box-labels">
                             <div class="up-button-box-label">
-                                <h5>
-                                    Buisness or Expert, looking for work
+                                <h5 style="white-space: normal;">
+                                    Biznes/ ekspert, i cili do të ofrojë një shërbim
                                  </h5>
                                 
                             </div>
@@ -37,7 +37,9 @@
                         <div id="button-box-2" class="up-button-box-labels">
                             <div class="up-button-box-label">
                                 <h5>
-                                    Client, hiring for a project
+                                    Klient, i cili kërkon një shërbim <br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 </h5>
                             </div>
                         </div>
@@ -45,11 +47,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 col-sm-12">
+        <div class="col-md-12 col-sm-12 col">
             <div class="text-center" id="btn-submit">
                 <button type="button" class="btn btn-success" (click)="redirect()">{{content}}</button>
-                <p class="mb-0" style="margin-top: 20px;">Already have an account? <a href="/login" style="color: green;">
-                        Log In
+                <p class="mb-0" style="margin-top: 20px;">E keni një llogari të krijuar? <a href="/login" style="color: green;">
+                    Kliko këtu për të hyrë 
                     </a>
                 </p>
                 &nbsp;
