--- a/front-end/src/app/login/login.component.css
+++ b/front-end/src/app/login/login.component.css
@@ -1,5 +1,6 @@
 .card {
     margin-top: 20px;
+    /* border: 1px solid grey; */
 }
 
 h2 {
@@ -27,7 +28,6 @@ h2 {
         margin-top: 5px;
         margin-left: 0px;
     }
-
 }
 
 @media ((min-width: 577px) and (max-width: 768px)) {
@@ -41,7 +41,7 @@ h2 {
 /* @media ((min-width: 769px) and (max-width: 1200px)) {
     .card-body {
         margin-top: 50px;
-        margin-left: 2550px;
+        margin-left: 300px !important;
     }
 
 } */
@@ -51,4 +51,8 @@ h2 {
         margin-top: 50px;
         margin-left: 400px;
     }
+
+}
+.form-group{
+    padding:10px ;
 }
