--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,40 +1,43 @@
 <div class="container">
     <div class="card">
-        <div class="text-center">
-            <h2>Welcome - Log In</h2>
-        </div>
-        <div class="card-body">
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="col-md-6 col-sm-12">
-                    <div class="form-group">
-                        <label for="username"><i class="fa fa-user" aria-hidden="true"></i> Username </label>
-                        <input type="text" formControlName="username" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && formControls.username.errors}" />
-                        <div *ngIf="submitted && formControls.username.errors" class="invalid-feedback">
-                            <div *ngIf="formControls.username.errors.required">Username is required</div>
+            <div class="text-center">
+                <h2>Welcome - Log In</h2>
+            </div>
+            <div class="card-body">
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <div class="col-md-6 col-sm-12">
+                        <div class="form-group">
+                            <label for="username"><i class="fa fa-user" aria-hidden="true"></i> Username </label>
+                            <input type="text" formControlName="username" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && formControls.username.errors}" />
+                            <div *ngIf="submitted && formControls.username.errors" class="invalid-feedback">
+                                <div *ngIf="formControls.username.errors.required">Username is required</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-sm-12">
-                    <div class="form-group">
-                        <label for="password"><i class="fa fa-key" aria-hidden="true"></i> Password </label>
-                        <input type="password" formControlName="password" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && formControls.password.errors}" />
-                        <div *ngIf="submitted && formControls.password.errors" class="invalid-feedback">
-                            <div *ngIf="formControls.password.errors.required">Password is required</div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="form-group">
+                            <label for="password"><i class="fa fa-key" aria-hidden="true"></i> Password </label>
+                            <input type="password" formControlName="password" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && formControls.password.errors}" />
+                            <div *ngIf="submitted && formControls.password.errors" class="invalid-feedback">
+                                <div *ngIf="formControls.password.errors.required">Password is required</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-sm-12">
-                    <div class="form-group">
-                        <button [disabled]="loading" class="btn btn-success" id="submit-btn">
-                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                            Login
-                        </button>
-                        <a routerLink="" class="btn btn-link">Register</a>
+                    <div class="col-md-6 col-sm-12" style="text-align: center">
+                        <div class="form-group">
+                            <button [disabled]="loading" class="btn btn-success" id="submit-btn">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                Login
+                            </button>
+
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
+                    <div class="col-md-6 col-sm-12" style="text-align: center">
+                        <span>Don't have an account?</span><a routerLink="" class="btn btn-link">Register</a>
+                    </div>
+                </form>
+            </div>
     </div>
 </div>
