--- a/front-end/src/app/register/register.component.css
+++ b/front-end/src/app/register/register.component.css
@@ -15,3 +15,17 @@
     }
 
 }
+.form-group{
+    padding: 10px;
+}
+@media (min-width:1000px ) {
+    .card-body {
+        margin-left: 400px;
+        
+    }
+    /* .btn-success{
+        width: 200px;
+    } */
+    
+
+}
