--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -37,3 +37,45 @@
     display: none;
   }
 } */
+@media (min-width:1200px) {
+  .input-group{
+    margin-top: 200px;
+    margin-left: 500px;
+    height: 70px;
+  }
+  .form-outline{
+    width: 600px;
+  
+  }
+  .container-fluid{
+    margin-left: 200px;
+  }
+  .container-fluid{
+    padding-top: 5px;
+  }
+}
+@media (max-width:576px) {
+  .input-group{
+    margin-top: 20px;
+    margin-left: 50px;
+  }
+  .form-outline{
+    width: 250px;
+  
+  }
+  .container-fluid{
+    margin-left: 100px;
+  }
+  .info-box{
+    padding-top: 2px;
+  }
+  
+}
+.container-fluid button{
+  background-color: orange;
+  padding-top: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
