--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,3 +1,1 @@
-<router-outlet></router-outlet>
-<!-- <app-sign-up></app-sign-up> -->
-<!-- <alert type="success">hello</alert> -->
+<app-home></app-home>
