--- a/front-end/src/app/components/dashboard/dashboard.component.css
+++ b/front-end/src/app/components/dashboard/dashboard.component.css
@@ -1,6 +1,9 @@
-.top-container{
-    color: aqua;
-    padding: 20%;
+#top-container{
+    background-color: rgb(68, 123, 171);
+    padding: 2%;
+}
+#bottom-container{
+    background-color: rgb(100, 199, 143);
 }
  #job {
     width: 320px;
@@ -10,6 +13,13 @@
     padding-top: 2%;
     margin-left: 3%;
     margin-bottom: 2%;
+    background-color: rgb(255, 255, 255);
+    /* border:  solid 1 rgb(0, 0, 0); */
 
   }
+
+  #form1{
+    width: 500px;
+  }
+  
  
