--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,17 @@
-<div class="container">
+
     <div class="d-flex flex-wrap" id="top-container">
+        <div class="d-flex justify-content-center">
+            <div class="input-group rounded">
+                <input type="search" id="form1" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <span class="input-group-text border-0" id="search-addon">
+                  <i class="fas fa-search"></i>
+                </span>
+              </div>
+        </div>
        
-          
+        </div>
     <div class="d-flex flex-wrap" id="bottom-container">
+        
         <div class="d-flex justify-content-around" id="job"> test</div>
         <div class="d-flex justify-content-around" id="job"> test</div>
         <div class="d-flex justify-content-around" id="job"> test</div>
@@ -16,5 +25,4 @@
         <div class="d-flex justify-content-around" id="job"> test</div>
         <div class="d-flex justify-content-around" id="job"> test</div>
        </div>
-    </div>
-</div>
+
