--- a/front-end/src/app/components/nav/home.component.css
+++ b/front-end/src/app/components/nav/home.component.css
@@ -16,6 +16,7 @@
 
 .sidenav-container {
   height: 100%;
+  background-color: aliceblue;
 }
 
 .sidenav {
@@ -24,12 +25,15 @@
 
 .sidenav .mat-toolbar {
   background: inherit;
+  background-color: aliceblue;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 2;
+  background-color: aliceblue;
+  color: black;
 }
 
 .example-spacer {
