--- a/front-end/src/app/components/dashboard/dashboard.component.css
+++ b/front-end/src/app/components/dashboard/dashboard.component.css
@@ -14,12 +14,18 @@
     margin-left: 3%;
     margin-bottom: 2%;
     background-color: rgb(255, 255, 255);
+    display: block;
     /* border:  solid 1 rgb(0, 0, 0); */
 
   }
 
   #form1{
-    width: 500px;
+    width: 300px;
   }
   
- 
+  @media (max-width: 576px) {
+    #job {
+        width: 220px;
+        height: 100px;
+    }
+ }
