--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -1,28 +1,41 @@
 
-    <div class="d-flex flex-wrap" id="top-container">
-        <div class="d-flex justify-content-center">
-            <div class="input-group rounded">
-                <input type="search" id="form1" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                <span class="input-group-text border-0" id="search-addon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </div>
+    <div class="d-flex flex-column">
+        <div class="p-2" id="top-container">
+            <div class="d-flex justify-content-center">
+                <div  style="width: 500px;"  class="input-group rounded">
+                    <input type="search" id="form1" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                    <span class="input-group-text border-0" id="search-addon">
+                      <i class="fas fa-search"></i>
+                    </span>
+                </div>
+            </div>
+            
         </div>
-       
+        <div class="p-2" id="bottom-container">
+            <div class="d-flex justify-content-center">
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item</div>
+            </div>
         </div>
-    <div class="d-flex flex-wrap" id="bottom-container">
-        
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-        <div class="d-flex justify-content-around" id="job"> test</div>
-       </div>
 
+      </div>
