--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -9,7 +9,10 @@
                     </span>
                 </div>
             </div>
-            
+            <div class="d-flex justify-content-center">
+               
+                <button type="button" class="btn btn-success">Register</button>
+            </div>
         </div>
         <div class="p-2" id="bottom-container">
             <div class="d-flex justify-content-center">
