--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="d-flex justify-content-center">
                
-                <button type="button" class="btn btn-success">Register</button>
+                <button type="button" id="btn-regi" class="btn btn-success">Register</button>
             </div>
         </div>
         <div class="p-2" id="bottom-container">
