--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
     <div class="d-flex flex-column">
         <div class="p-2" id="top-container">
             <div class="d-flex justify-content-center">
-                <div  style="width: 500px;"  class="input-group rounded">
-                    <input type="search" id="form1" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <div  id="form1"   class="input-group rounded">
+                    <input type="search"  class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
                     <span class="input-group-text border-0" id="search-addon">
                       <i class="fas fa-search"></i>
                     </span>
