--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -9,13 +9,17 @@
                     </span>
                 </div>
             </div>
+            <div class="d-flex justify-content-center" style="padding-top: 5%;">
+                <h3 style="color: white;">Ndërsa dy kafe mbarojnë një punë</h3>
+            </div>
+            
             <div class="d-flex justify-content-center">
-               
+              
                 <button type="button" id="btn-regi" class="btn btn-success">Register</button>
             </div>
         </div>
         <div class="p-2" id="bottom-container">
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center" style="padding-top: 5%;">
                 <div class="p-2" id="job">Flex item</div>
                 <div class="p-2" id="job">Flex item</div>
                 <div class="p-2" id="job">Flex item</div>
