--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -15,12 +15,12 @@
             
             <div class="d-flex justify-content-center">
               
-                <button type="button" id="btn-regi" class="btn btn-success">Register</button>
+                <button type="button" id="btn-regi" class="btn btn-success" (click)="goRegister()">Register</button>
             </div>
         </div>
         <div class="p-2" id="bottom-container">
             <div class="d-flex justify-content-center" style="padding-top: 5%;">
-                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job">Flex item <i class="fas fa-wrench"></i></div>
                 <div class="p-2" id="job">Flex item</div>
                 <div class="p-2" id="job">Flex item</div>
                 <div class="p-2" id="job">Flex item</div>
