--- a/front-end/src/app/components/login/login.component.html
+++ b/front-end/src/app/components/login/login.component.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12" style="text-align: center">
-                        <span>Don't have an account?</span><a routerLink="" class="btn btn-link">Register</a>
+                        <span>Don't have an account?</span><a routerLink="/register" class="btn btn-link">Register</a>
                     </div>
                 </form>
             </div>
