--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -20,28 +20,161 @@
         </div>
         <div class="p-2" id="bottom-container">
             <div class="d-flex justify-content-center" style="padding-top: 5%;">
-                <div class="p-2" id="job">Flex item <i class="fas fa-wrench"></i></div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-laptop fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Programming-Development
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-paint-brush fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Design & Art
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-file fa-3x" aria-hidden="true"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Writing & Translation
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-play fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Administrative & Secretarial
+                    </div> 
+                </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-balance-scale fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Sales & Marketing
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-building fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Engineering & Architecture
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-briefcase fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Business & Finance
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-university fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Education & Training
+                    </div> 
+                </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-gavel fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Legal
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-bolt fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Hydraulic and Electrician
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-bed fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Carpentry and Masonry
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-unlock-alt fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                       Locksmith and Fabrication
+                    </div> 
+                </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
-                <div class="p-2" id="job">Flex item</div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-car fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                       Driver
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-fire fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Gardning / Gas Stove / Pest Control
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-wrench fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                       Auto Repair
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-user-md fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Nurse / Doctor / Pharmacist
+                    </div> 
+                </div>
+                
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa  fa-paw fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                       Cleaner / Pet Sitter
+                    </div> 
+                </div>
+                <div class="p-2" id="job"> 
+                    <div>
+                        <i class="fa fa-cog fa-3x"></i>
+                    </div>
+                    <div style="margin-top: 5%">
+                        Others
+                    </div> 
+                </div>
+                
+                
             </div>
         </div>
 
