--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center" style="padding-top: 5%;">
-                <h3 style="color: white;">Ndërsa dy kafe mbarojnë një punë</h3>
+                <h3 style="color: white;">Kurse dy kafe mbaro një punë</h3>
             </div>
             
             <div class="d-flex justify-content-center">
