--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
         <div class="p-2" id="bottom-container">
             
             <div class="d-flex justify-content-center" style="padding-top: 5%;">
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Programming')"> 
                     <div>
                         <i class="fa fa-laptop fa-3x"></i>
                     </div>
@@ -29,7 +29,7 @@
                         Programming-Development
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Design')"> 
                     <div>
                         <i class="fa fa-paint-brush fa-3x"></i>
                     </div>
@@ -37,7 +37,7 @@
                         Design & Art
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Writing')"> 
                     <div>
                         <i class="fa fa-file fa-3x" aria-hidden="true"></i>
                     </div>
@@ -48,7 +48,7 @@
                 
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Sales')"> 
                     <div>
                         <i class="fa fa-balance-scale fa-3x"></i>
                     </div>
@@ -57,7 +57,7 @@
                     </div> 
                 </div>
                
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Business')"> 
                     <div>
                         <i class="fa fa-briefcase fa-3x"></i>
                     </div>
@@ -65,7 +65,7 @@
                         Business & Finance
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Education')"> 
                     <div>
                         <i class="fa fa-university fa-3x"></i>
                     </div>
@@ -76,7 +76,7 @@
             </div>
             <div class="d-flex justify-content-center">
                
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Locksmith')"> 
                     <div>
                         <i class="fa fa-unlock-alt fa-3x"></i>
                     </div>
@@ -84,15 +84,15 @@
                        Locksmith and Fabrication
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Administrative')"> 
                     <div>
-                        <i class="fa fa-play fa-3x"></i>
+                        <i class="fa fa-user fa-3x"></i>
                     </div>
                     <div style="margin-top: 5%">
                         Administrative & Secretarial
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Engineering')"> 
                     <div>
                         <i class="fa fa-building fa-3x"></i>
                     </div>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Legal')"> 
                     <div>
                         <i class="fa fa-gavel fa-3x"></i>
                     </div>
@@ -110,7 +110,7 @@
                         Legal
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Hydraulic')"> 
                     <div>
                         <i class="fa fa-bolt fa-3x"></i>
                     </div>
@@ -118,7 +118,7 @@
                         Hydraulic and Electrician
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Carpentry')"> 
                     <div>
                         <i class="fa fa-bed fa-3x"></i>
                     </div>
@@ -129,7 +129,7 @@
                 
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Driver')"> 
                     <div>
                         <i class="fa fa-car fa-3x"></i>
                     </div>
@@ -137,7 +137,7 @@
                        Driver
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Gardning')"> 
                     <div>
                         <i class="fa fa-fire fa-3x"></i>
                     </div>
@@ -145,7 +145,7 @@
                         Gardning / Gas Stove / Pest Control
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Auto')"> 
                     <div>
                         <i class="fa fa-wrench fa-3x"></i>
                     </div>
@@ -157,7 +157,7 @@
                 
             </div>
             <div class="d-flex justify-content-center">
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Nurse')"> 
                     <div>
                         <i class="fa fa-user-md fa-3x"></i>
                     </div>
@@ -166,7 +166,7 @@
                     </div> 
                 </div>
                 
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Cleaner')"> 
                     <div>
                         <i class="fa  fa-paw fa-3x"></i>
                     </div>
@@ -174,7 +174,7 @@
                        Cleaner / Pet Sitter
                     </div> 
                 </div>
-                <div class="p-2" id="job"> 
+                <div class="p-2" id="job" (click)="clickDiv('Others')"> 
                     <div>
                         <i class="fa fa-cog fa-3x"></i>
                     </div>
