--- a/front-end/src/app/components/dashboard/dashboard.component.css
+++ b/front-end/src/app/components/dashboard/dashboard.component.css
@@ -15,6 +15,7 @@
     margin-bottom: 1%;
     background-color: rgb(255, 255, 255);
     display: block;
+    cursor: pointer;
     /* border:  solid 1 rgb(0, 0, 0); */
 
   }
