--- a/front-end/src/app/components/login/login.component.css
+++ b/front-end/src/app/components/login/login.component.css
@@ -19,11 +19,17 @@ h2 {
     border-color: rgb(216, 12, 12);
     color: rgb(230, 14, 14);
 }
+.card{
+    margin-top: 10%;
+}
 
 .btn-link{
  color: green;
 }
 @media (max-width: 576px) {
+    .card{
+        margin-top: 30%;
+    }
     .card-body {
         margin-top: 5px;
         margin-left: 0px;
