remove background of image

--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -16,7 +16,7 @@
       <button type="button" id="mat-button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <img  src="\assets\images\logo.jpg" id="img-logo" height="50px">&nbsp;
+      <img  src="\assets\images\logo.png" id="img-logo" height="50px">&nbsp;
       <div style="cursor: pointer" (click)="goHome()">
         <span class="span-mbaro" >MBARO PUNE</span>
 
@@ -26,7 +26,7 @@
       </div>
         <span class="example-spacer"></span>
       <a mat-flat-button  class="btn btn-secondary btn-lg" id="btn-post" tabindex="-1" role="button" >Post a job</a>
-      
+
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
