--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -18,7 +18,7 @@
       </button>
       <img  src="\assets\images\logo.png" id="img-logo" height="50px">&nbsp;
       <div style="cursor: pointer" (click)="goHome()">
-        <span class="span-mbaro" >MBARO PUNE</span>
+        <span class="span-mbaro" style="font-weight: bolder;font-family: 'Ink Free'">MBARO PUNE</span>
 
       </div>
       <span class="example-spacer"></span>
