--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -5,11 +5,11 @@
         <h2>MENU</h2>
       </button></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="home"> <i class="fa fa-handshake fa-fw"></i> How It Works</a>
-      <a mat-list-item href="case"> <i class="fa fa-exclamation  fa-fw"></i> About Mbaro Pune</a>
-      <a mat-list-item href="vacation"> <i class="fa fa-question-circle  fa-fw"></i>Why Mbaro Pune</a>
-      <a mat-list-item href="schedule"> <i class="fa fa-money fa-fw"></i> Pricing</a>
-      <a mat-list-item href="login"> <i class="fa fa-sign-in fa-fw"></i> Log In</a>
+      <a mat-list-item href="home"> <i class="fa fa-handshake fa-fw"></i>&nbsp;&nbsp;How It Works</a>
+      <a mat-list-item href="case"> <i class="fa fa-info-circle fa-fw"></i>&nbsp;&nbsp;About Mbaro Pune</a>
+      <a mat-list-item href="vacation"> <i class="fas fa-book fa-fw"></i>&nbsp;&nbsp;Why Mbaro Pune</a>
+      <a mat-list-item href="schedule"> <i class="fas fa-money-bill-alt fa-fw"></i>&nbsp;&nbsp;Pricing</a>
+      <a mat-list-item href="login"> <i class="fa fa-user fa-fw"></i>&nbsp;&nbsp;Log In</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
