--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -134,7 +134,7 @@
                         <i class="fa fa-car fa-3x"></i>
                     </div>
                     <div style="margin-top: 5%">
-                       Driver
+                        Driver / Wedding Planner / Hair Stylist
                     </div> 
                 </div>
                 <div class="p-2" id="job" (click)="clickDiv('Gardning')"> 
@@ -171,7 +171,7 @@
                         <i class="fa  fa-paw fa-3x"></i>
                     </div>
                     <div style="margin-top: 5%">
-                       Cleaner / Pet Sitter
+                       House Cleaner / Pet Sitter / security 
                     </div> 
                 </div>
                 <div class="p-2" id="job" (click)="clickDiv('Others')"> 
