--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -17,7 +17,7 @@
       <button type="button" id="mat-button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <img  src="\assets\images\logo.jpg" id="img-logo" height="50px">&nbsp;
+      <!-- <img  src="\assets\images\logo.jpg" id="img-logo" height="50px">&nbsp; -->
       <div style="cursor: pointer" (click)="goHome()">
         <span class="span-mbaro" >MBARO PUNE</span>
 
