--- a/front-end/src/app/components/dashboard/dashboard.component.css
+++ b/front-end/src/app/components/dashboard/dashboard.component.css
@@ -1,6 +1,11 @@
 #top-container{
     background-color: rgb(100, 199, 143);
+    background-image: url('../../../assets/images/aerial-view-business-team.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
     padding: 2%;
+    height: 500px;
 }
 #bottom-container{
     background-color:rgb(255, 255, 255) ;
@@ -33,5 +38,9 @@
         width: 220px;
         height: 100px;
         font-size: smaller;
+    }
+
+    #top-container{
+      height: 300px;
     }
  }
