--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -26,7 +26,8 @@
       <div class="col" style="text-align:right">
       </div>
         <span class="example-spacer"></span>
-      <a mat-flat-button  class="btn btn-primary btn-lg" id="btn-post" tabindex="-1" role="button" >Post a Job</a>
+      <a mat-flat-button  class="btn btn-primary btn-lg" id="btn-post" tabindex="-1" role="button" >Register
+      </a>
       
     </mat-toolbar>
     <router-outlet></router-outlet>
