--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -10,12 +10,12 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center" style="padding-top: 5%;">
-                <h3 style="color: white;">Kurse dy kafe mbaro një punë</h3>
+                <!-- <h3 style="color: white;">Kurse dy kafe mbaro një punë</h3> -->
             </div>
             
             <div class="d-flex justify-content-center">
               
-                <button type="button" id="btn-regi" class="btn btn-success" (click)="goRegister()">Register</button>
+                <!-- <button type="button" id="btn-regi" class="btn btn-success" (click)="goRegister()">Register</button> -->
             </div>
         </div>
         <div class="p-2" id="bottom-container">
