chat button added

--- a/front-end/src/app/components/client/client.component.css
+++ b/front-end/src/app/components/client/client.component.css
@@ -17,4 +17,28 @@ table {
     #first-content{
         width: 100px;
     }
+   
+   
   }
+
+  .ratings{
+    margin-right:10px;
+}
+
+.ratings i{
+    
+    color:#cecece;
+}
+
+.rating-color{
+    color:#fbc634 !important;
+}
+
+
+.small-ratings i{
+  color:#cecece;   
+}
+
+.review-stat{
+    margin-bottom:2px;
+}
