chat button modified

--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -28,7 +28,7 @@
                        
                         <b>$12/hr</b>
                         <div style="margin-top:5%">
-                         <button type="button" class="btn btn-outline-success">    <mat-icon>chat</mat-icon>
+                         <button type="button" id="btn-chat" class="btn btn-outline-success">    <mat-icon id="icn-chat">chat</mat-icon>
                                 chat</button>
 
                         </div>
