--- a/front-end/src/app/components/client/client.component.css
+++ b/front-end/src/app/components/client/client.component.css
@@ -9,7 +9,7 @@ table {
         width: 75px;
     }
     #btn-see{
-        font-size: smaller;
+        font-size: 13px;
     }
     .btn{
         padding: 0;
@@ -52,4 +52,8 @@ table {
 .mat-icon {
     font-size: 25px;
     padding: 0;
+  }
+
+   .btn-link{
+    font-size: 13px;
   }
