--- a/front-end/src/app/components/client/client.component.css
+++ b/front-end/src/app/components/client/client.component.css
@@ -1,3 +1,11 @@
+#review,#first-content{
+    margin-left: 5%;
+}
+
+#last-content{
+    margin-right: 5%;
+}
+
 table {
     width: 100%;
     height: 100%;
@@ -25,6 +33,12 @@ table {
     font-size: 17px;
     padding: 0;
   }
+  #review,#first-content{
+    margin-left: 0;
+}
+#last-content{
+    margin-right: 0;
+}
   }
 
   .ratings{
