--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -14,7 +14,7 @@
                         <img src="../../../assets/images/NicePng_gray-circle-png_1366211.png" id="dp"  alt="" class="user-image mr-1 p-2" />
                         <div class="p-2">Bussiness name
                             <div class="d-flex flex-row">
-                                <button type="button" class="btn btn-link" id="btn-see">See more</button>
+                                <button type="button" class="btn btn-link" id="btn-see" (click)="seeBusiness()">See more</button>
                             </div>
                         </div>
                             
@@ -35,10 +35,11 @@
                        
                         <b>$12/hr</b>
                         <div style="margin-top:55%">
-                         <button type="button" id="btn-chat" class="btn btn-outline-success">    <mat-icon id="icn-chat">chat</mat-icon>
+                             <button type="button" id="btn-chat" class="btn btn-outline-success">    <mat-icon id="icn-chat">chat</mat-icon>
                                 chat</button>
-
+                            
                         </div>
+                        
                     </div>
                     
                 </div>
