--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -33,7 +33,7 @@
 
                         <b>$12/hr</b>
                         <div style="margin-top:55%">
-                             <button type="button" id="btn-chat" class="btn btn-outline-success">    <mat-icon id="icn-chat">chat</mat-icon>
+                             <button type="button" id="btn-chat" class="btn btn-outline-success" (click)="openChatModal()" >    <mat-icon id="icn-chat">chat</mat-icon>
                                 chat</button>
 
                         </div>
