--- a/front-end/src/app/components/business/business.component.html
+++ b/front-end/src/app/components/business/business.component.html
@@ -2,4 +2,4 @@
                                 
 </div>
 
-<ng-image-slider [images]="imgCollection" #nav></ng-image-slider>
+<!-- <ng-image-slider [images]="imgCollection" #nav></ng-image-slider> -->
