--- a/front-end/src/app/components/chat/chat.component.html
+++ b/front-end/src/app/components/chat/chat.component.html
@@ -34,3 +34,14 @@
   <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
   <span class="time-left">11:05</span>
 </div>
+
+<!--<label for="msg"><b>Message</b></label>-->
+<div class="container">
+  <textarea placeholder="Type message.." name="msg" required style="width:100%" ></textarea>
+</div>
+<div class="container darker">
+  <button type="submit" class="btn btn-success btn-sm">Send</button>
+</div>
+
+
+
