chat button changed

--- a/front-end/src/app/components/client/client.component.css
+++ b/front-end/src/app/components/client/client.component.css
@@ -10,8 +10,15 @@ table {
     width: 100%;
     height: 100%;
   }
- #dp{width:  145px;}
+ #dp{width:  145px;
+margin-left: -11%;}
   
+ #price{
+    font-size: 20px;
+ }
+ #btn-chat{
+    width: 155px;
+   }
 @media (max-width: 576px) {
     #dp{
         width: 75px;
