--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -31,7 +31,7 @@
 
                     <div class="p-2  " id="last-content">
 
-                        <b>$12/hr</b>
+                        <b><p id="price">$12/hr</p></b>
                         <div style="margin-top:55%">
                              <button type="button" id="btn-chat" class="btn btn-outline-success" (click)="openChatModal()" >    <mat-icon id="icn-chat">chat</mat-icon>
                                 chat</button>
