send button changed

--- a/front-end/src/app/components/chat/chat.component.html
+++ b/front-end/src/app/components/chat/chat.component.html
@@ -37,11 +37,8 @@
 
 <!--<label for="msg"><b>Message</b></label>-->
 <div class="container">
-  <textarea placeholder="Type message.." name="msg" required style="width:100%" ></textarea>
+  <textarea placeholder="Type message.." name="msg" required style="width:100%" ></textarea>  
+  <button style="float: right;" type="submit" class="btn btn-success btn-sm">Send</button>
 </div>
-<div class="container darker">
-  <button type="submit" class="btn btn-success btn-sm">Send</button>
-</div>
-
 
 
