--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -53,5 +53,10 @@
       </div>
     </mat-toolbar>
     <router-outlet></router-outlet>
+    <footer>
+      <app-footer>
+      </app-footer>
+    </footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
